--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Você decide o futuro da IA</title>
+    <title>Estilo de vida mais saúdavel</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,7 +14,7 @@
 
     <body>
         <div class="caixa-principal">
-            <h1>Você decide o futuro da IA</h1>
+            <h1>Estilo de vida mais saúdavel</h1>
             <div class="caixa-perguntas"></div>
             <div class="caixa-alternativas"></div>
             <div class="caixa-resultado">
